android - project helper removed from plugin